<resources>
    <string name="app_name">Starrail Info</string>
    <string name="about">About</string>
    <string name="dummyelement">Element: Imaginary</string>
    <string name="dummyaffil">Affiliation: The Xianzhou Luofu</string>
    <string name="path">Path:</string>
    <string name="dummypath">Destruction</string>
    <string name="intro">Intro</string>
    <string name="dummyintro">High Elder of the Luofu, bearer of the Azure Dragon\'s legacy, bringing forth clouds and rain, and entrusted with the duty of guarding the Ambrosial Arbor. Revered with the title of "Imbibitor Lunae."</string>
</resources>